testsuite/resolution/compile-fail/multiple-definitions.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
// CHECK-L: multiple-definitions.verona:${LINE:+3}:7: error: Symbol 'SameClass' is already defined in this scope
// CHECK-L: multiple-definitions.verona:${LINE:+1}:7: note: 'SameClass' was previously defined here
class SameClass {}
class SameClass {}

// CHECK-L: multiple-definitions.verona:${LINE:+2}:24: error: Symbol 'X' is already defined in this scope
// CHECK-L: multiple-definitions.verona:${LINE:+1}:21: note: 'X' was previously defined here
class SameTypeParam[X, X] {}

class SameLocals {
  // CHECK-L: multiple-definitions.verona:${LINE:+2}:28: error: Symbol 'x' is already defined in this scope
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:14: note: 'x' was previously defined here
  same_param(x: U64 & imm, x: U64 & imm) { }

  same_var() {
    // CHECK-L: multiple-definitions.verona:${LINE:+3}:9: error: Symbol 'x' is already defined in this scope
    // CHECK-L: multiple-definitions.verona:${LINE:+1}:9: note: 'x' was previously defined here
    var x;
    var x;
  }

  // CHECK-L: multiple-definitions.verona:${LINE:+3}:9: error: Symbol 'x' is already defined in this scope
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:13: note: 'x' was previously defined here
  param_var(x: U64 & imm) {
    var x;
  }
}

class SameField {
  // CHECK-L: multiple-definitions.verona:${LINE:+3}:3: error: Class 'SameField' already has a member named 'field'
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:3: note: 'field' was previously defined here
  field: U64 & imm;
  field: U64 & imm;
}

class SameMethod {
  // CHECK-L: multiple-definitions.verona:${LINE:+3}:3: error: Class 'SameMethod' already has a member named 'method'
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:3: note: 'method' was previously defined here
  method() {}
  method() {}
}

class SameFieldMethod1 {
  // CHECK-L: multiple-definitions.verona:${LINE:+3}:3: error: Class 'SameFieldMethod1' already has a member named 'name'
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:3: note: 'name' was previously defined here
  name: U64 & imm;
  name() {}
}

class SameFieldMethod2 {
  // CHECK-L: multiple-definitions.verona:${LINE:+3}:3: error: Class 'SameFieldMethod2' already has a member named 'name'
  // CHECK-L: multiple-definitions.verona:${LINE:+1}:3: note: 'name' was previously defined here
  name() {}
  name: U64 & imm;
}
